syntax = "proto3";
package proto.common;
message Header {
	int32 message_type = 1;
	int64 message_cmd = 2;
	int32 message_len = 3;
}